# glance

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.ch.md  README.md
.github/workflows/: ci.yml  release.yml
assets/chrome-bridge/extension/: background.js  manifest.json  popup.html  popup.js
docs/: devlog-v0.41-v0.60.md
examples/: mock_mcp_server.rs
examples/chrome-adapters/: barchart-options.yaml  barchart-quote.yaml  bilibili-dynamic.yaml  bilibili-favorite.yaml  bilibili-feed.yaml  bilibili-history.yaml  bilibili-hot.yaml  bilibili-ranking.yaml  bilibili-search.yaml  bloomberg-news.yaml  boss-joblist.yaml  boss-search.yaml  chaoxing-assignments.yaml  ctrip-search.yaml  douban-book-hot.yaml  douban-marks.yaml  douban-movie-hot.yaml  douban-reviews.yaml  douban-search.yaml  douban-subject.yaml  douban-top250.yaml  facebook-feed.yaml  facebook-friends.yaml  facebook-notifications.yaml  facebook-search.yaml  instagram-explore.yaml  instagram-profile.yaml  instagram-saved.yaml  instagram-search.yaml  jike-feed.yaml  jike-search.yaml  linux-do-hot.yaml  linux-do-latest.yaml  linux-do-search.yaml  medium-feed.yaml  medium-search.yaml  medium-user.yaml  notion-favorites.yaml  notion-search.yaml  notion-sidebar.yaml  (+30 more)
examples/chrome-adapters-native/: x_post.yaml
glance-app/: package-lock.json  package.json  vite.config.ts
glance-app/src/: App.tsx  styles.css  types.ts
glance-app/src-tauri/: Cargo.toml  tauri.conf.json
glance-app/src-tauri/capabilities/: default.json
glance-app/src-tauri/icons/: icon.icns
glance-app/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
glance-app/src/components/: BackendTab.tsx  CcusageTab.tsx  ChromeTab.tsx  LogsTab.tsx  RtkTab.tsx  SettingsTab.tsx  Sparkline.tsx  StatusTab.tsx  TabHeader.tsx  ToolsTab.tsx  UpstreamMcpsTab.tsx
glance-app/src/hooks/: useConfig.ts
src/: events.rs  lib.rs
src/backend/: chrome_bridge.rs  glm_mcp.rs  mod.rs  openai_compat.rs  vision.rs
src/config/: mod.rs
src/install/: chrome.rs  chrome_adapter_import.rs  chrome_adapters.rs  claude.rs  codex.rs  cursor.rs  mod.rs
src/markdown/: mod.rs
src/mcp/: mod.rs  outline.rs  protocol.rs  sub_agent.rs  transport.rs
src/mcp_aggregator/: client_stdio.rs  client_streamable_http.rs  mod.rs
src/obsidian/: mod.rs
src/safety/: mod.rs
src/tools/: chrome.rs  explain.rs  fix_lint.rs  image_describe.rs  md_outline.rs  md_read.rs  md_write.rs  mod.rs  obsidian_backlinks.rs  obsidian_read.rs  obsidian_search.rs  obsidian_write.rs  repo_explore.rs  research.rs  search.rs  web_fetch.rs  web_search.rs  write_docs.rs  write_tests.rs
tests/: aggregator_stdio.rs
