[package]
name = "glance-app"
version = "0.1.0"
description = "Menu-bar GUI for the glance MCP server"
authors = ["xtftbwvfp"]
edition = "2021"
default-run = "glance-app"

[lib]
name = "glance_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "glance-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Re-use the existing glance lib for config + events types.
glance = { path = "../.." }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync", "process"] }
image = "0.25"
